--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,16 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Meet account =)",
   "description": "Add (?authuser=1) to meet link",
-  "version": "1.0",
+  "version": "1.1",
   "permissions": [
     "storage",
-    "webRequest",
-    "webRequestBlocking",
-    "https://meet.google.com/*"
+    "webRequest"
   ],
   "icons": {
     "16": "/img/16.png",
     "48": "/img/48.png",
     "128": "/img/128.png"
-  },
-  "page_action": {
-    "default_icon": {
-      "16": "/img/16.png",
-      "48": "/img/48.png",
-      "128": "/img/128.png"
-    }
   },
   "content_scripts": [
     {
