--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,10 @@
   "name": "Meet account =)",
   "description": "Add (?authuser=1) to meet link",
   "version": "1.1",
+  "action":{
+    "default_popup": "menu/menu.html",
+    "default_icon": "img/128.png"
+  },
   "permissions": [
     "storage",
     "webRequest"
